<resources>
    <string name="app_name">HomeworkPrepearingToBirthday</string>
    <string name="wish_list">Wish list</string>
    <string name="check_box_qadrocopter">Квадрокоптер</string>
    <string name="checkBoxLawnMower">Газонокосилка</string>
    <string name="checkBoxMoney">Деньги</string>
    <string name="checkBoxFishingSuit">Костюм для рыбалки</string>
    <string name="checkBoxUnderwearingSuit">Нижнее белье</string>
    <string name="checkBoxNewSmartphone">Телефон (iOS)</string>
    <string name="Order">Выбрать</string>
    <string name="guest_marina">Марина</string>
    <string name="guest_mama">Мама</string>
    <string name="guest_papa">Папа</string>
    <string name="guest_tetya_tanya">Тетя Таня</string>
    <string name="guest_katya_markova">Катя Маркова</string>
    <string name="guest_kolya_markov">Коля Марков</string>
    <string name="guest_dasha">Даша</string>
    <string name="guest_ksusha">Ксюша</string>
    <string name="guest_dima_poltanov">Дима Полтанов</string>
    <string name="guest_anya_poltanova">Аня Полтанова</string>
    <string name="guest_veronika">Вероника</string>
    <string name="guest_nastya">Настя</string>
    <string name="guest_danil">Данил</string>
    <string name="guest_sasha_petuhov">Саша Петухов</string>
    <string name="guest_marina_petuhova">Марина Петухова</string>
    <string name="guest_misha_monashev">Миша Монашев</string>
    <string name="guest_misha_fidorov">Миша Федоров</string>
    <string name="guest_masha_fidorova">Маша Федорова</string>
    <string name="guest_yana_monasheva">Яна Монашева</string>
    <string name="guest_farida">Фарида</string>
    <string name="guest_zhenia_shevnin">Женя Шевнин</string>
    <string name="guest_zhenia_baikov">Женя Байков</string>
    <string name="guest_katya_karpova">Катя Карпова</string>
    <string name="guest_kolya_karpov">Коля Карпов</string>
    <string name="guest_tronina">Ирина Тронина</string>
    <string name="guest_marina_pozdeeva">Марина Поздеева</string>
    <string name="guest_sasha_pozdeev">Саша Поздеев</string>
    <string name="guest_volodia_tihonov">Володя Тихонов</string>
    <string name="guest_bella_tihonova">Супруга Тихонова</string>
    <string name="guest_sharif">Шариф</string>
    <string name="gest_list">Список гостей</string>
    <string name="text_view_list_guests">Количество приглашенных гостей : %s, необходимые имениннику подарки: %s</string>
    <string name="text_view_choice_celebrater">Выбор именинника</string>
    <string name="total_list_guests">На празднике будут присутствовать гостей: </string>
    <string name="button_send_invation">Отправить сообщение приглашенным</string>
    <string name="quadrokopter_on_default">Квадрокоптер по умолчанию</string>
</resources>